# AlphaOPT

./: .gitignore  Makefile  README.md  eval_config.yaml  eval_config_claude45.yaml  eval_config_e1_gpt54_original.yaml  eval_config_e2_gpt54_retrained.yaml  eval_config_gpt52.yaml  evaluation.py  library_diagnosis.py  library_online_learning.py  library_refinement.py  main.py  pyproject.toml  train_config.yaml  train_config_e2_gpt54_gurobi.yaml
config/: AlphaOPT-credentials.example.toml
configs/: README.md
configs/eval/: default.yaml  gpt55_original_library.yaml  gpt55_retrained_library.yaml
configs/train/: default.yaml  gpt55_gurobi_train_data_all_452.yaml
data/experience_library/default_1/: run_metadata.json  train_config.resolved.json
docs/: ALPHAOPT_AGENTIC_ARCHITECTURE.md  progress.md
infra/: .env.example  clickhouse-profiles-config.xml  create_laminar_env.py  docker-compose.laminar.yml
paper/: 00README.json  main.tex  reference.bib
paper/prompts/: Diagnose_Issues.txt  Diagnose_Pos_Neg.txt  Diagnose_Unretri.txt  Generate_Insights.txt  Ins_Refinement.txt  Retri_Condition.txt  Retri_Label.txt  Self_Explore.txt
src/: agent_tracing.py  config.py  credentials.py  experience_library.py  laminar_tracing.py  llm_diagnostic.py  llm_evolver.py  llm_extractor.py  llm_programmer.py  llm_retriever.py  resume_state.py  train_eval_utils.py  utils.py
src/prompts/: prompts_diag.py  prompts_ins.py  prompts_opt.py  prompts_retri.py
src/tools/: llm_preflight.py  regen_correct_programs.py
tests/: test_evaluation_paths.py  test_resume_state.py  test_tracing.py
(+65 files in other folders)
